--- a/RedisManager-Web/src/main/resources/static/tpl/app/dashboard.html
+++ b/RedisManager-Web/src/main/resources/static/tpl/app/dashboard.html
@@ -4,7 +4,7 @@
 	  	  <h1 class="m-n font-thin h3">Dashboard</h1>
 	  </div>
     
-	  <div ng-if="false" class="col-sm-6 text-right hidden-xs">
+	  <div class="col-sm-6 text-right hidden-xs">
 	  	  <button class="btn m-b-xs btn-sm btn-success btn-addon" ng-click="create()"><i class="fa fa-search"></i>Create New Cluster</button>
 	  </div>
   </div>
