--- a/RedisManager-Web/src/main/resources/static/tpl/app/install.html
+++ b/RedisManager-Web/src/main/resources/static/tpl/app/install.html
@@ -4,7 +4,8 @@
 	  	  <h1 class="m-n font-thin h3">Create New Cluster</h1>
 	  </div>
 	  <div class="col-sm-6 text-right hidden-xs">
-	  	  <button class="btn m-b-xs btn-sm btn-success btn-addon" ng-click="import()"><i class="fa fa-search"></i>Import Redis Version</button>
+	  	  <button class="btn m-b-xs btn-sm btn-success btn-addon" ng-click="importServer()"><i class="fa fa-linux"></i>Import Redis Server</button>
+	  	  <button class="btn m-b-xs btn-sm btn-success btn-addon" ng-click="importVersion()"><i class="fa fa-cloud-upload"></i>Import Redis Version</button>
 	  </div>
   </div>
   <div class="wrapper-md text-center">
