--- a/RedisManager-Web/src/main/resources/static/index.html
+++ b/RedisManager-Web/src/main/resources/static/index.html
@@ -24,6 +24,7 @@
   <script src="vendor/angular/angular-resource/angular-resource.js"></script>
   <script src="vendor/angular/angular-ui-router/angular-ui-router.js"></script> 
   <script src="vendor/modules/angularjs-toaster/toaster.js"></script>
+  <script src="vendor/modules/angular-file-upload/angular-file-upload.min.js"></script>
   <!-- bootstrap -->
   <script src="vendor/angular/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <!-- lazyload -->
