--- a/RedisManager-Web/src/main/resources/static/tpl/app/modal/moveSlave.html
+++ b/RedisManager-Web/src/main/resources/static/tpl/app/modal/moveSlave.html
@@ -19,4 +19,5 @@
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-disabled="siteform.$invalid" ng-click="ok()">OK</button>
+    <button class="btn btn-default" ng-click="closeModal()">Cancle</button>
 </div>
